@@ -94,14 +94,18 @@ class SplitBlockDialog extends DialogComponentProvider {
 		panelOne.setBorder(BorderFactory.createTitledBorder("Block to Split"));
 		blockOneNameField = new JTextField(10);
 		blockOneNameField.setName("BlockOneName");
+		blockOneNameField.getAccessibleContext().setAccessibleName("Name of Block To Split");
 		blockOneStartField = new JTextField(10);
 		blockOneStartField.setName("BlockOneStart");
+		blockOneStartField.getAccessibleContext().setAccessibleName("Address of Block To Split");
 
 		blockOneEnd = new AddressInput();
 		blockOneEnd.setName("BlockOneEnd");
+		blockOneEnd.setAccessibleName("New Block End Adddress");
 
 		blockOneLengthField = new RegisterField(32, null, false);
 		blockOneLengthField.setName("BlockOneLength");
+		blockOneLengthField.getAccessibleContext().setAccessibleName("New Block Length");
 
 		panelOne.add(new GLabel("Block Name:", SwingConstants.RIGHT));
 		panelOne.add(blockOneNameField);
@@ -116,13 +120,16 @@ class SplitBlockDialog extends DialogComponentProvider {
 		panelTwo.setBorder(BorderFactory.createTitledBorder("New Block"));
 		blockTwoNameField = new JTextField(10);
 		blockTwoNameField.setName("BlockTwoName");
+		blockTwoNameField.getAccessibleContext().setAccessibleName("Name of New Block");
 		blockTwoStart = new AddressInput();
 		blockTwoStart.setName("BlockTwoStart");
+		blockTwoStart.setAccessibleName("New Block Start Address");
 		blockTwoEndField = new JTextField(10);
 		blockTwoEndField.setName("BlockTwoEnd");
 
 		blockTwoLengthField = new RegisterField(32, null, false);
 		blockTwoLengthField.setName("BlockTwoLength");
+		blockTwoLengthField.getAccessibleContext().setAccessibleName("New Block Size");
 
 		panelTwo.add(new GLabel("Block Name:", SwingConstants.RIGHT));
 		panelTwo.add(blockTwoNameField);
@@ -163,7 +170,7 @@ class SplitBlockDialog extends DialogComponentProvider {
 		blockOneEnd.setAddress(endAddr);
 		blockOneEnd.setAddressSpaceEditable(false);
 
-		blockOneLengthField.setValue(new Long(block.getSize()));
+		blockOneLengthField.setValue(Long.valueOf(block.getSize()));
 
 		blockTwoNameField.setText(name + ".split");
 
@@ -258,7 +265,7 @@ class SplitBlockDialog extends DialogComponentProvider {
 				blockTwoStart.setAddress(b2Start);
 				long b2Length = block.getEnd().subtract(b2Start) + 1;
 
-				blockTwoLengthField.setValue(new Long(b2Length));
+				blockTwoLengthField.setValue(Long.valueOf(b2Length));
 
 			}
 			catch (Exception e) {
@@ -290,7 +297,7 @@ class SplitBlockDialog extends DialogComponentProvider {
 				blockOneEnd.setAddress(b1End);
 				length = (int) b1End.subtract(block.getStart()) + 1;
 
-				blockOneLengthField.setValue(new Long(length));
+				blockOneLengthField.setValue(Long.valueOf(length));
 
 			}
 			catch (Exception e) {
@@ -371,13 +378,13 @@ class SplitBlockDialog extends DialogComponentProvider {
 					"End address must be less than original block end (" + block.getEnd() + ")");
 				return false;
 			}
-			blockOneLengthField.setValue(new Long(length));
+			blockOneLengthField.setValue(Long.valueOf(length));
 
 			try {
 				Address b2Start = end.addNoWrap(1);
 				blockTwoStart.setAddress(b2Start);
 				length = block.getEnd().subtract(b2Start) + 1;
-				blockTwoLengthField.setValue(new Long(length));
+				blockTwoLengthField.setValue(Long.valueOf(length));
 			}
 			catch (Exception e) {
 				if (e instanceof AddressOverflowException) {
@@ -413,12 +420,12 @@ class SplitBlockDialog extends DialogComponentProvider {
 
 			// change block Two length, blockOneEnd, block One length
 			long length = end.subtract(start) + 1;
-			blockTwoLengthField.setValue(new Long(length));
+			blockTwoLengthField.setValue(Long.valueOf(length));
 			try {
 				Address b1End = start.subtractNoWrap(1);
 				blockOneEnd.setAddress(b1End);
 				length = b1End.subtract(block.getStart()) + 1;
-				blockOneLengthField.setValue(new Long(length));
+				blockOneLengthField.setValue(Long.valueOf(length));
 			}
 			catch (Exception e) {
 				if (e instanceof AddressOverflowException) {
