@@ -20,6 +20,10 @@ import db.ShortField;
 
 public class ShortColumnAdapter extends AbstractColumnAdapter {
 
+	ShortColumnAdapter(String columnName, int column) {
+		super(columnName, column);
+	}
+
 	@Override
 	Class<?> getValueClass() {
 		return Short.class;
@@ -27,12 +31,16 @@ public class ShortColumnAdapter extends AbstractColumnAdapter {
 
 	@Override
 	Object getKeyValue(DBRecord rec) {
-		return new Short(((ShortField) rec.getKeyField()).getShortValue());
+		return Short.valueOf(((ShortField) rec.getKeyField()).getShortValue());
 	}
 
 	@Override
 	Object getValue(DBRecord rec, int col) {
-		return new Short(rec.getShortValue(col));
+		return Short.valueOf(rec.getShortValue(col));
 	}
 
+	@Override
+	public LongRenderer getColumnRenderer() {
+		return longRenderer;
+	}
 }
