@@ -4,9 +4,9 @@
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *      http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -111,20 +111,21 @@ public class DyldCacheUtils {
 		 * Creates a new {@link SplitDyldCache}
 		 * 
 		 * @param baseProvider The {@link ByteProvider} of the "base" DYLD Cache file
-		 * @param shouldProcessSymbols True if symbols should be processed; otherwise, false
+		 * @param shouldProcessLocalSymbols True if local symbols should be processed; otherwise, 
+		 *   false
 		 * @param log The log
 		 * @param monitor A cancelable task monitor
 		 * @throws IOException If there was an IO-related issue with processing the split DYLD Cache
 		 * @throws CancelledException If the user canceled the operation
 		 */
-		public SplitDyldCache(ByteProvider baseProvider, boolean shouldProcessSymbols,
+		public SplitDyldCache(ByteProvider baseProvider, boolean shouldProcessLocalSymbols,
 				MessageLog log, TaskMonitor monitor) throws IOException, CancelledException {
 
 			// Setup "base" DYLD Cache
 			monitor.setMessage("Parsing " + baseProvider.getName() + " headers...");
 			providers.add(baseProvider);
 			DyldCacheHeader baseHeader = new DyldCacheHeader(new BinaryReader(baseProvider, true));
-			baseHeader.parseFromFile(shouldProcessSymbols, log, monitor);
+			baseHeader.parseFromFile(shouldProcessLocalSymbols, log, monitor);
 			headers.add(baseHeader);
 			names.add(baseProvider.getName());
 
@@ -145,7 +146,7 @@ public class DyldCacheUtils {
 				providers.add(splitProvider);
 				DyldCacheHeader splitHeader =
 					new DyldCacheHeader(new BinaryReader(splitProvider, true));
-				splitHeader.parseFromFile(shouldProcessSymbols, log, monitor);
+				splitHeader.parseFromFile(shouldProcessLocalSymbols, log, monitor);
 				headers.add(splitHeader);
 				names.add(splitFSRL.getName());
 				uuidToFileMap.put(splitHeader.getUUID(), splitFSRL);
@@ -156,26 +157,22 @@ public class DyldCacheUtils {
 				String uuid = subcacheEntry.getUuid();
 				String extension = subcacheEntry.getCacheExtension();
 				FSRL fsrl = uuidToFileMap.get(uuid);
-				if (fsrl != null) {
-					log.appendMsg("Including subcache: " + fsrl.getName() + " - " + uuid);
-				}
-				else {
-					log.appendMsg(String.format("Missing subcache: %s%s",
+				if (fsrl == null) {
+					throw new IOException("Missing subcache: %s%s".formatted(
 						extension != null ? (baseProvider.getName() + extension + " - ") : "",
 						uuid));
 				}
+				log.appendMsg("Including subcache: " + fsrl.getName() + " - " + uuid);
 			}
 			String symbolUUID = baseHeader.getSymbolFileUUID();
 			if (symbolUUID != null) {
 				FSRL symbolFSRL = uuidToFileMap.get(symbolUUID);
-				if (symbolFSRL != null) {
-					log.appendMsg(
-						"Including symbols subcache: " + symbolFSRL.getName() + " - " + symbolUUID);
+				if (symbolFSRL == null) {
+					throw new IOException("Missing symbols subcache: %s.symbols - %s"
+							.formatted(baseProvider.getName(), symbolUUID));
 				}
-				else {
-					log.appendMsg(String.format("Missing symbols subcache: %s.symbols - %s",
-						baseProvider.getName(), symbolUUID));
-				}
+				log.appendMsg(
+					"Including symbols subcache: " + symbolFSRL.getName() + " - " + symbolUUID);
 			}
 		}
 
@@ -216,6 +213,30 @@ public class DyldCacheUtils {
 		 */
 		public int size() {
 			return providers.size();
+		}
+		
+		/**
+		 * Gets the base address of the split DYLD cache.  This is where the cache should be loaded 
+		 * in memory.
+		 * 
+		 * @return The base address of the split DYLD cache
+		 */
+		public long getBaseAddress() {
+			return headers.get(0).getBaseAddress();
+		}
+
+		/**
+		 * Gets the {@link DyldCacheLocalSymbolsInfo} from the split DYLD Cache files
+		 * 
+		 * @return The {@link DyldCacheLocalSymbolsInfo} from the split DYLD Cache files, or null 
+		 *   if no local symbols are defined
+		 */
+		public DyldCacheLocalSymbolsInfo getLocalSymbolInfo() {
+			return headers.stream()
+					.map(h -> h.getLocalSymbolsInfo())
+					.filter(info -> info != null)
+					.findAny()
+					.orElse(null);
 		}
 
 		@Override
