@@ -4,9 +4,9 @@
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *      http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -18,10 +18,9 @@ package ghidra.file.formats.sevenzip;
 
 import static ghidra.formats.gfilesystem.fileinfo.FileAttributeType.*;
 
-import java.util.*;
-
 import java.io.Closeable;
 import java.io.IOException;
+import java.util.*;
 
 import org.apache.commons.io.FilenameUtils;
 
@@ -31,35 +30,33 @@ import ghidra.formats.gfilesystem.FileCache.FileCacheEntry;
 import ghidra.formats.gfilesystem.FileCache.FileCacheEntryBuilder;
 import ghidra.formats.gfilesystem.annotations.FileSystemInfo;
 import ghidra.formats.gfilesystem.crypto.CryptoSession;
-import ghidra.formats.gfilesystem.crypto.PasswordValue;
 import ghidra.formats.gfilesystem.fileinfo.FileAttributes;
 import ghidra.formats.gfilesystem.fileinfo.FileType;
+import ghidra.framework.generic.auth.Password;
 import ghidra.util.Msg;
 import ghidra.util.exception.CancelledException;
 import ghidra.util.exception.CryptoException;
 import ghidra.util.task.TaskMonitor;
 import net.sf.sevenzipjbinding.*;
-import net.sf.sevenzipjbinding.simple.ISimpleInArchive;
 import net.sf.sevenzipjbinding.simple.ISimpleInArchiveItem;
 
+/**
+ * GFilesystem that uses 7zip native libraries to open archives and extract files.
+ * <p>
+ * WARNING: care is taken to synchronize access to the underlying sevenzip library methods as
+ * some race conditions have been encountered that cause the entire jdk to core dump. 
+ */
 @FileSystemInfo(type = "7zip", description = "7Zip", factory = SevenZipFileSystemFactory.class)
-public class SevenZipFileSystem implements GFileSystem {
-	private FileSystemService fsService;
-	private FileSystemIndexHelper<ISimpleInArchiveItem> fsIndexHelper;
-	private FSRLRoot fsrl;
-	private FileSystemRefManager refManager = new FileSystemRefManager(this);
+public class SevenZipFileSystem extends AbstractFileSystem<ISimpleInArchiveItem> {
 	private Map<Integer, String> passwords = new HashMap<>();
 
 	private IInArchive archive;
-	private ISimpleInArchive archiveInterface;
 	private SZByteProviderStream szBPStream;
 	private ISimpleInArchiveItem[] items;
 	private ArchiveFormat archiveFormat;
 
 	public SevenZipFileSystem(FSRLRoot fsrl, FileSystemService fsService) {
-		this.fsService = fsService;
-		this.fsrl = fsrl;
-		this.fsIndexHelper = new FileSystemIndexHelper<>(this, fsrl);
+		super(fsrl, fsService);
 	}
 
 	/**
@@ -80,42 +77,41 @@ public class SevenZipFileSystem implements GFileSystem {
 			szBPStream = new SZByteProviderStream(byteProvider);
 			archive = SevenZip.openInArchive(null, szBPStream);
 			archiveFormat = archive.getArchiveFormat();
-			archiveInterface = archive.getSimpleInterface();
-			items = archiveInterface.getArchiveItems();
+			items = archive.getSimpleInterface().getArchiveItems();
 
 			indexFiles(monitor);
 			ensurePasswords(monitor);
 		}
 		catch (SevenZipException e) {
-			throw new IOException("Failed to open archive: " + fsrl, e);
+			throw new IOException("Failed to open archive: " + fsFSRL, e);
 		}
 	}
 
 	@Override
 	public void close() throws IOException {
-		refManager.onClose();
+		synchronized (fsIndex) {
+			refManager.onClose();
 
-		FSUtilities.uncheckedClose(archive, "Problem closing 7-Zip archive");
-		archive = null;
-		archiveInterface = null;
+			FSUtilities.uncheckedClose(archive, "Problem closing 7-Zip archive");
+			archive = null;
 
-		FSUtilities.uncheckedClose(szBPStream, null);
-		szBPStream = null;
+			FSUtilities.uncheckedClose(szBPStream, null);
+			szBPStream = null;
 
-		fsIndexHelper.clear();
-		items = null;
+			fsIndex.clear();
+			items = null;
+		}
 	}
 
 	private void indexFiles(TaskMonitor monitor) throws CancelledException, SevenZipException {
-		monitor.initialize(items.length);
-		monitor.setMessage("Indexing files");
+		monitor.initialize(items.length, "Indexing files");
 		for (ISimpleInArchiveItem item : items) {
 			if (monitor.isCancelled()) {
 				throw new CancelledException();
 			}
 
 			long itemSize = Objects.requireNonNullElse(item.getSize(), -1L);
-			fsIndexHelper.storeFile(fixupItemPath(item), item.getItemIndex(), item.isFolder(),
+			fsIndex.storeFile(fixupItemPath(item), item.getItemIndex(), item.isFolder(),
 				itemSize, item);
 		}
 	}
@@ -125,7 +121,7 @@ public class SevenZipFileSystem implements GFileSystem {
 		if (items.length == 1 && itemPath.isBlank()) {
 			// special case when there is a single unnamed file.
 			// use the name of the 7zip file itself, minus the extension
-			itemPath = FilenameUtils.getBaseName(fsrl.getContainer().getName());
+			itemPath = FilenameUtils.getBaseName(fsFSRL.getContainer().getName());
 		}
 		if (itemPath.isEmpty()) {
 			itemPath = "<blank>";
@@ -135,15 +131,16 @@ public class SevenZipFileSystem implements GFileSystem {
 
 	private String getPasswordForFile(GFile file, ISimpleInArchiveItem encryptedItem,
 			TaskMonitor monitor) {
+		FSRL containerFSRL = fsFSRL.getContainer();
 		int itemIndex = encryptedItem.getItemIndex();
 		if (!passwords.containsKey(itemIndex)) {
 			try (CryptoSession cryptoSession = fsService.newCryptoSession()) {
 				String prompt = passwords.isEmpty()
-						? fsrl.getContainer().getName()
-						: String.format("%s in %s", file.getName(), fsrl.getContainer().getName());
-				for (Iterator<PasswordValue> pwIt =
-					cryptoSession.getPasswordsFor(fsrl.getContainer(), prompt); pwIt.hasNext();) {
-					try (PasswordValue passwordValue = pwIt.next()) {
+						? containerFSRL.getName()
+						: "%s in %s".formatted(file.getName(), containerFSRL.getName());
+				for (Iterator<Password> pwIt =
+					cryptoSession.getPasswordsFor(containerFSRL, prompt); pwIt.hasNext();) {
+					try (Password passwordValue = pwIt.next()) {
 						monitor.setMessage("Testing password for " + file.getName());
 
 						String password = String.valueOf(passwordValue.getPasswordChars());	// we are forced to use strings by 7zip's api
@@ -159,7 +156,7 @@ public class SevenZipFileSystem implements GFileSystem {
 							passwords.put(unlockedFileIndex, password);
 						}
 						if (!successFileIndexes.isEmpty()) {
-							cryptoSession.addSuccessfulPassword(fsrl.getContainer(), passwordValue);
+							cryptoSession.addSuccessfulPassword(containerFSRL, passwordValue);
 						}
 						if (passwords.containsKey(itemIndex)) {
 							break;
@@ -191,7 +188,7 @@ public class SevenZipFileSystem implements GFileSystem {
 		return arrayResult;
 	}
 
-	private void ensurePasswords(TaskMonitor monitor) throws CancelledException, IOException {
+	private void ensurePasswords(TaskMonitor monitor) throws IOException {
 		// Alert!  Unusual code!
 		// Background: contrary to normal expectations, zip container files can have a
 		// unique password per-embedded-file.
@@ -211,7 +208,7 @@ public class SevenZipFileSystem implements GFileSystem {
 			ISimpleInArchiveItem encryptedItem = null;
 			while ((encryptedItem = getFirstItemWithoutPassword(encryptedItems)) != null &&
 				!monitor.isCancelled()) {
-				GFile gFile = fsIndexHelper.getFileByIndex(encryptedItem.getItemIndex());
+				GFile gFile = fsIndex.getFileByIndex(encryptedItem.getItemIndex());
 				if (gFile == null) {
 					throw new IOException("Unable to retrieve file " + encryptedItem.getPath());
 				}
@@ -227,7 +224,7 @@ public class SevenZipFileSystem implements GFileSystem {
 			if (!noPasswordFoundList.isEmpty()) {
 				Msg.warn(this,
 					"Unable to find password for " + noPasswordFoundList.size() + " file(s) in " +
-						fsrl.getContainer().getName());
+						fsFSRL.getContainer().getName());
 			}
 		}
 	}
@@ -254,75 +251,53 @@ public class SevenZipFileSystem implements GFileSystem {
 	}
 
 	@Override
-	public String getName() {
-		return fsrl.getContainer().getName();
-	}
-
-	@Override
-	public FSRLRoot getFSRL() {
-		return fsrl;
-	}
-
-	@Override
 	public boolean isClosed() {
 		return szBPStream == null;
 	}
 
 	@Override
-	public FileSystemRefManager getRefManager() {
-		return refManager;
-	}
-
-	@Override
-	public GFile lookup(String path) throws IOException {
-		return fsIndexHelper.lookup(path);
-	}
-
-	@Override
-	public List<GFile> getListing(GFile directory) throws IOException {
-		return fsIndexHelper.getListing(directory);
-	}
-
-	@Override
 	public FileAttributes getFileAttributes(GFile file, TaskMonitor monitor) {
-		FileAttributes result = new FileAttributes();
-		if (fsIndexHelper.getRootDir().equals(file)) {
-			result.add(NAME_ATTR, "/");
-			result.add("Archive Format", archiveFormat.toString());
-		}
-		else {
-			ISimpleInArchiveItem item = fsIndexHelper.getMetadata(file);
-			if (item == null) {
-				return result;
+		synchronized (fsIndex) {
+			FileAttributes result = new FileAttributes();
+			if (fsIndex.getRootDir().equals(file)) {
+				result.add(NAME_ATTR, "/");
+				result.add("Archive Format", archiveFormat.toString());
 			}
+			else {
+				ISimpleInArchiveItem item = fsIndex.getMetadata(file);
+				if (item == null) {
+					return result;
+				}
 
-			result.add(NAME_ATTR, FilenameUtils.getName(uncheckedGet(item::getPath, "unknown")));
-			result.add(FILE_TYPE_ATTR,
-				uncheckedGet(item::isFolder, false) ? FileType.DIRECTORY : FileType.FILE);
-			boolean encrypted = uncheckedGet(item::isEncrypted, false);
-			result.add(IS_ENCRYPTED_ATTR, encrypted);
-			if (encrypted) {
-				result.add(HAS_GOOD_PASSWORD_ATTR, passwords.get(item.getItemIndex()) != null);
+				result.add(NAME_ATTR,
+					FilenameUtils.getName(uncheckedGet(item::getPath, "unknown")));
+				result.add(FILE_TYPE_ATTR,
+					uncheckedGet(item::isFolder, false) ? FileType.DIRECTORY : FileType.FILE);
+				boolean encrypted = uncheckedGet(item::isEncrypted, false);
+				result.add(IS_ENCRYPTED_ATTR, encrypted);
+				if (encrypted) {
+					result.add(HAS_GOOD_PASSWORD_ATTR, passwords.get(item.getItemIndex()) != null);
+				}
+				String comment = uncheckedGet(item::getComment, null);
+				result.add(COMMENT_ATTR, !comment.isBlank() ? comment : null);
+				result.add(COMPRESSED_SIZE_ATTR, uncheckedGet(item::getPackedSize, null));
+				result.add(SIZE_ATTR, uncheckedGet(item::getSize, null));
+
+				Integer crc = uncheckedGet(item::getCRC, null);
+				result.add("CRC", crc != null ? "%08X".formatted(crc) : null);
+				result.add("Compression Method", uncheckedGet(item::getMethod, null));
+				result.add(CREATE_DATE_ATTR, uncheckedGet(item::getCreationTime, null));
+				result.add(MODIFIED_DATE_ATTR, uncheckedGet(item::getLastWriteTime, null));
 			}
-			String comment = uncheckedGet(item::getComment, null);
-			result.add(COMMENT_ATTR, !comment.isBlank() ? comment : null);
-			result.add(COMPRESSED_SIZE_ATTR, uncheckedGet(item::getPackedSize, null));
-			result.add(SIZE_ATTR, uncheckedGet(item::getSize, null));
-
-			Integer crc = uncheckedGet(item::getCRC, null);
-			result.add("CRC", crc != null ? String.format("%08X", crc) : null);
-			result.add("Compression Method", uncheckedGet(item::getMethod, null));
-			result.add(CREATE_DATE_ATTR, uncheckedGet(item::getCreationTime, null));
-			result.add(MODIFIED_DATE_ATTR, uncheckedGet(item::getLastWriteTime, null));
+			return result;
 		}
-		return result;
 	}
 
 	@Override
 	public ByteProvider getByteProvider(GFile file, TaskMonitor monitor)
 			throws IOException, CancelledException {
 		try {
-			ISimpleInArchiveItem item = fsIndexHelper.getMetadata(file);
+			ISimpleInArchiveItem item = fsIndex.getMetadata(file);
 
 			if (item == null) {
 				return null;
@@ -341,7 +316,9 @@ public class SevenZipFileSystem implements GFileSystem {
 				}
 			}
 			try (SZExtractCallback szCallback = new SZExtractCallback(monitor, itemIndex, true)) {
-				archive.extract(new int[] { itemIndex }, false /* extract mode */, szCallback);
+				synchronized (fsIndex) {
+					archive.extract(new int[] { itemIndex }, false /* extract mode */, szCallback);
+				}
 				FileCacheEntry result = szCallback.getExtractResult(itemIndex);
 				if (result == null) {
 					throw new IOException("Unable to extract " + file.getFSRL());
@@ -411,8 +388,8 @@ public class SevenZipFileSystem implements GFileSystem {
 			if (currentItem.isEncrypted() && !passwords.containsKey(currentIndex)) {
 				// if we lack a password for this item, don't try to extract it
 				Msg.debug(SevenZipFileSystem.this,
-					"No password for file[" + currentIndex + "] " + currentName + " of " +
-						fsrl.getContainer().getName() + ", unable to extract.");
+					"No password for file[%d] %s of %s, unable to extract.".formatted(currentIndex,
+						currentName, fsFSRL.getContainer().getName()));
 				return null;
 			}
 
@@ -426,8 +403,7 @@ public class SevenZipFileSystem implements GFileSystem {
 			if (!currentItem.isFolder() && extractAskMode == ExtractAskMode.EXTRACT) {
 				try {
 					currentCacheEntryBuilder = fsService.createTempFile(currentItem.getSize());
-					monitor.initialize(currentItem.getSize());
-					monitor.setMessage("Extracting " + currentName);
+					monitor.initialize(currentItem.getSize(), "Extracting " + currentName);
 				}
 				catch (IOException e) {
 					throw new SevenZipException(e);
@@ -442,9 +418,8 @@ public class SevenZipFileSystem implements GFileSystem {
 			String password = passwords.get(currentIndex);
 			if (password == null) {
 
-				Msg.debug(SevenZipFileSystem.this,
-					"No password for file[" + currentIndex + "] " + currentName + " of " +
-						fsrl.getContainer().getName());
+				Msg.debug(SevenZipFileSystem.this, "No password for file[%d] %s of %s"
+						.formatted(currentIndex, currentName, fsFSRL.getContainer().getName()));
 				// hack, return a non-null bad password.  normally shouldn't get here as
 				// encrypted files w/missing password are skipped by getStream()
 				password = "";
@@ -457,8 +432,8 @@ public class SevenZipFileSystem implements GFileSystem {
 			// STEP 3: SevenZip calls this multiple times for all the bytes in the file.
 			// We write them to our temp file.
 			if (currentCacheEntryBuilder == null) {
-				throw new SevenZipException(
-					"Bad Sevenzip Extract Callback state, " + currentIndex + ", " + currentName);
+				throw new SevenZipException("Bad Sevenzip Extract Callback state, %d, %s"
+						.formatted(currentIndex, currentName));
 			}
 			try {
 				currentCacheEntryBuilder.write(data);
@@ -480,9 +455,9 @@ public class SevenZipFileSystem implements GFileSystem {
 			try {
 				FileCacheEntry fce = currentCacheEntryBuilder.finish();
 				if (extractOperationResult == ExtractOperationResult.OK) {
-					GFile gFile = fsIndexHelper.getFileByIndex(currentIndex);
+					GFile gFile = fsIndex.getFileByIndex(currentIndex);
 					if (gFile != null && gFile.getFSRL().getMD5() == null) {
-						fsIndexHelper.updateFSRL(gFile, gFile.getFSRL().withMD5(fce.getMD5()));
+						fsIndex.updateFSRL(gFile, gFile.getFSRL().withMD5(fce.getMD5()));
 					}
 					if (saveResults) {
 						extractResults.put(currentIndex, fce);
@@ -491,8 +466,8 @@ public class SevenZipFileSystem implements GFileSystem {
 						FSUtilities.formatSize(fce.length()));
 				}
 				else {
-					Msg.warn(SevenZipFileSystem.this, "Failed to push file[" + currentIndex +
-						"] " + currentName + " to cache: " + extractOperationResult);
+					Msg.warn(SevenZipFileSystem.this, "Failed to push file[%d] %s to cache: %s"
+							.formatted(currentIndex, currentName, extractOperationResult));
 					extractOperationResultToException(extractOperationResult);
 				}
 			}
