@@ -1,6 +1,5 @@
 /* ###
  * IP: GHIDRA
- * REVIEWED: YES
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -69,7 +68,7 @@ public class IntIndexManager implements Serializable {
             nextIndex--;
         }
         else {
-            freeList.add(new Integer(index));
+            freeList.add(Integer.valueOf(index));
         }
 
         // all nodes are free, so reset...
